@@ -576,25 +576,69 @@ class TestCase(unittest.TestCase):
             self.fail("%r is an instance of %s rather than %s" % (
                 obj, obj.__class__, kls))
 
+    def _capture_warnings(self, a_callable, *args, **kwargs):
+        """A helper for callDeprecated and applyDeprecated.
+
+        :param a_callable: A callable to call.
+        :param args: The positional arguments for the callable
+        :param kwargs: The keyword arguments for the callable
+        :return: A tuple (warnings, result). result is the result of calling
+            a_callable(*args, **kwargs).
+        """
+        local_warnings = []
+        def capture_warnings(msg, cls, stacklevel=None):
+            # we've hooked into a deprecation specific callpath,
+            # only deprecations should getting sent via it.
+            self.assertEqual(cls, DeprecationWarning)
+            local_warnings.append(msg)
+        original_warning_method = symbol_versioning.warn
+        symbol_versioning.set_warning_method(capture_warnings)
+        try:
+            result = a_callable(*args, **kwargs)
+        finally:
+            symbol_versioning.set_warning_method(original_warning_method)
+        return (local_warnings, result)
+
+    def applyDeprecated(self, deprecation_format, a_callable, *args, **kwargs):
+        """Call a deprecated callable without warning the user.
+
+        :param deprecation_format: The deprecation format that the callable
+            should have been deprecated with. This is the same type as the 
+            parameter to deprecated_method/deprecated_function. If the 
+            callable is not deprecated with this format, an assertion error
+            will be raised.
+        :param a_callable: A callable to call. This may be a bound method or
+            a regular function. It will be called with *args and **kwargs.
+        :param args: The positional arguments for the callable
+        :param kwargs: The keyword arguments for the callable
+        :return: The result of a_callable(*args, **kwargs)
+        """
+        call_warnings, result = self._capture_warnings(a_callable,
+            *args, **kwargs)
+        expected_first_warning = symbol_versioning.deprecation_string(
+            a_callable, deprecation_format)
+        if len(call_warnings) == 0:
+            raise AssertionError("No assertion generated by call to %s" %
+                a_callable)
+        self.assertEqual(expected_first_warning, call_warnings[0])
+        return result
+
     def callDeprecated(self, expected, callable, *args, **kwargs):
         """Assert that a callable is deprecated in a particular way.
+
+        This is a very precise test for unusual requirements. The 
+        applyDeprecated helper function is probably more suited for most tests
+        as it allows you to simply specify the deprecation format being used
+        and will ensure that that is issued for the function being called.
 
         :param expected: a list of the deprecation warnings expected, in order
         :param callable: The callable to call
         :param args: The positional arguments for the callable
         :param kwargs: The keyword arguments for the callable
         """
-        local_warnings = []
-        def capture_warnings(msg, cls, stacklevel=None):
-            self.assertEqual(cls, DeprecationWarning)
-            local_warnings.append(msg)
-        method = symbol_versioning.warn
-        symbol_versioning.set_warning_method(capture_warnings)
-        try:
-            result = callable(*args, **kwargs)
-        finally:
-            symbol_versioning.set_warning_method(method)
-        self.assertEqual(expected, local_warnings)
+        call_warnings, result = self._capture_warnings(callable,
+            *args, **kwargs)
+        self.assertEqual(expected, call_warnings)
         return result
 
     def _startLogFile(self):
