@@ -75,7 +75,7 @@ class TestCommitBuilder(TestCaseWithRepository):
         entry = tree.inventory['foo-id']
         builder = tree.branch.get_commit_builder([])
         self.callDeprecated(['Root entry should be supplied to'
-            ' record_entry_contents, as of bzr 0.10.'], 
+            ' record_entry_contents, as of bzr 0.10.'],
             builder.record_entry_contents, entry, [], 'foo', tree)
         builder.finish_inventory()
         rev_id = builder.commit('foo bar')
