@@ -34,6 +34,10 @@ IN DEVELOPMENT
     * New utility function symbol_versioning.deprecation_string. Returns the
       formatted string for a callable, deprecation format pair. (Robert Collins)
 
+    * New TestCase helper applyDeprecated. This allows you to call a callable
+      which is deprecated without it spewing to the screen, just by suppling
+      the deprecation format string issued for it. (Robert Collins)
+
 bzr 0.10.0RC1  2006-08-28
   
   IMPROVEMENTS:
